@@ -148,10 +148,6 @@ public final class Styles {
                 color = newColor;
                 Preferences.setPreference(name(), toHex());   
             }
-
-            if (this.equals(COLOR_BACKGROUND) || this.equals(COLOR_FOREGROUND)) {
-                setupLAF();
-            }
         }
     }
 
@@ -198,19 +194,4 @@ public final class Styles {
     	
     	return r;
     }
-
-    /** Apply Look and Feel modifications during inital setup and color modifications. */
-	public static void setupLAF() {
-        Color backgroundColor = Styles.EditorColor.COLOR_BACKGROUND.getColor();
-        Color foregroundColor = Styles.EditorColor.COLOR_FOREGROUND.getColor();
-        UIManager.put("TextPane.background", backgroundColor);
-        UIManager.put("TextPane.foreground", foregroundColor);
-        UIManager.put("TextPane.caretForeground", foregroundColor);
-        UIManager.put("TextArea.background", backgroundColor);
-        UIManager.put("TextArea.foreground", foregroundColor);
-        UIManager.put("TextArea.caretForeground", foregroundColor);
-        UIManager.put("EditorPane.background", backgroundColor);
-        UIManager.put("EditorPane.foreground", foregroundColor);
-        UIManager.put("EditorPane.caretForeground", foregroundColor);
-	}
 }
